<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="6dp"
    app:contentPadding="25dp"
    style="@style/CardView.Light"
    android:id="@+id/event_page"
    android:background="@color/color_gray"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/iv_round" />

            <TextView
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_image"
                android:paddingTop="16dp"
                android:text="@string/title1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_title"
                android:paddingTop="16dp"
                android:text="@string/date"
                android:textColor="@color/purple_700"
                android:textSize="14sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_RSVP_Link"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/event_date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="-1dp"
                android:background="@drawable/btn_bc_bg"
                android:inputType="textUri"

                android:text="@string/rsvp_btn"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/btn_RSVP_Link"
                android:text="@string/event_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="gone" />
            

        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>