<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context=".event_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar

            android:id="@+id/info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/react_toolbar"
            android:elevation="3dp"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/frame_toolbar"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:paddingEnd="16dp"
                    android:text="@string/event_details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="300dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_gdsc" />

            </FrameLayout>



        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/ly_custom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_below="@+id/info_toolbar">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/custom_line" />
        </LinearLayout>

           <LinearLayout
               android:id="@+id/ly_iv_detail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:paddingTop="16dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:layout_below="@id/ly_custom_line"
               >
               <ImageView
                   android:id="@+id/iv_details"
                   android:layout_width="match_parent"
                   android:layout_height="240dp"
                   android:src="@mipmap/ic_launcher"
                   />


           </LinearLayout>
               <LinearLayout
                   android:id="@+id/ly_title_detail"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:paddingTop="16dp"
                   android:paddingLeft="16dp"
                   android:paddingRight="16dp"
                   android:layout_below="@id/ly_iv_detail">
                   <TextView
                       android:id="@+id/tv_details"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                       android:text="@string/title1"
                       android:padding="16dp"
                       />
               </LinearLayout>
            <RelativeLayout
                android:id="@+id/ly_timedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_below="@id/ly_title_detail">
                <ImageView
                    android:id="@+id/ic_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_schedule"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:layout_toRightOf="@+id/ic_sec"
                    android:text="@string/str_time" />

            </RelativeLayout>
            <LinearLayout
                android:id="@+id/ly_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_below="@+id/ly_timedate">
                <TextView
                    android:id="@+id/tv_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/event_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_below="@+id/ly_desc">
                <Button
                    android:id="@+id/btn_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rsvp_btn"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_bc_bg"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

            </LinearLayout>
     </RelativeLayout>
    </ScrollView>









</LinearLayout>

