<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CommunityFragment">
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar

            android:id="@+id/info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/react_toolbar"
            android:elevation="3dp"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/frame_toolbar"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:paddingEnd="16dp"
                    android:text="@string/meet_our_core_team"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="300dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_gdsc" />

            </FrameLayout>



        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/ly_custom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_below="@+id/info_toolbar">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/custom_line" />
        </LinearLayout>

         <RelativeLayout
          android:id="@+id/rl_core"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/info_toolbar"
          android:orientation="horizontal"
          android:paddingLeft="16dp"
          android:paddingTop="16dp"
          android:paddingRight="16dp">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/str_core"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </RelativeLayout>
        <LinearLayout
            android:id="@+id/ly_core_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:layout_below="@id/rl_core">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rc_core"/>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>